ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Campaign_Name_For_Docket__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name_For_Docket__c</fullName>
    <formula>LEFT( Name ,  LEN(Name)-5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name For Docket</label>
    <type>Text</type>
</CustomField>