ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Connect_Default_Selected_Item__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Connect_Default_Selected_Item__c</fullName>
    <inlineHelpText>Default Selected Item testing feroz</inlineHelpText>
    <label>C&amp;P Connect Default Selected Item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>