ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Connect_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Connect_Form_Name__c</fullName>
    <label>C&amp;P Connect Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>