ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Last_Update__c</fullName>
    <label>C&amp;P Last Update</label>
    <type>DateTime</type>
</CustomField>