ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Lift_Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Landing_Page__c</fullName>
    <label>C&amp;P Lift Landing Page</label>
    <length>25</length>
    <type>Text</type>
</CustomField>