ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Lift_Rate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Rate__c</fullName>
    <label>C&amp;P Lift Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>