ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Year__c</fullName>
    <label>Current Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>