ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Docket_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Docket_Review_Link__c</fullName>
    <formula>&quot;https://www.tfaforms.com/4732038?GCCampaign=&quot;&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docket Review Link</label>
    <type>Text</type>
</CustomField>