ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Funding_Priorities__c.field-meta.xml
<CustomField>
    <fullName>Funding_Priorities__c</fullName>
    <label>Funding Priorities</label>
    <type>TextArea</type>
</CustomField>