ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/GC_ID__c.field-meta.xml
<CustomField>
    <fullName>GC_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GC ID</label>
    <type>Text</type>
</CustomField>