ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Giving_Circle_Balance__c.field-meta.xml
<CustomField>
    <fullName>Giving_Circle_Balance__c</fullName>
    <formula>AmountWonOpportunities   -  Total_Grants_Awarded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Giving Circle Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>