ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Giving_Circle_Code__c.field-meta.xml
<CustomField>
    <fullName>Giving_Circle_Code__c</fullName>
    <description>Giving Circle C&amp;P Tracking Code</description>
    <label>Giving Circle Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-SF</fullName>
            </value>
            <value>
                <fullName>2-Pleasanton</fullName>
            </value>
            <value>
                <fullName>3-Peninsula</fullName>
            </value>
            <value>
                <fullName>4-East Bay(w)</fullName>
            </value>
            <value>
                <fullName>5-SF(m)</fullName>
            </value>
            <value>
                <fullName>7-Sacto</fullName>
            </value>
            <value>
                <fullName>8-Tech</fullName>
            </value>
            <value>
                <fullName>10-So Bay</fullName>
            </value>
            <value>
                <fullName>11-LGBTQ</fullName>
            </value>
            <value>
                <fullName>12-East Bay(m)</fullName>
            </value>
            <value>
                <fullName>13-CV</fullName>
            </value>
            <value>
                <fullName>19-Stanislaus</fullName>
            </value>
            <value>
                <fullName>14-LA</fullName>
            </value>
            <value>
                <fullName>15-Cisco</fullName>
            </value>
            <value>
                <fullName>17-SanDiego</fullName>
            </value>
            <value>
                <fullName>18-InlandEmpire</fullName>
                <label>18-Inland</label>
            </value>
            <value>
                <fullName>20-OC</fullName>
            </value>
            <value>
                <fullName>21-CC</fullName>
            </value>
            <value>
                <fullName>22-KPLA</fullName>
            </value>
            <value>
                <fullName>24-Kern</fullName>
            </value>
            <value>
                <fullName>25-Dropbox</fullName>
            </value>
            <value>
                <fullName>26-Tulare</fullName>
            </value>
            <value>
                <fullName>27-SantaB</fullName>
            </value>
            <value>
                <fullName>28-Merced</fullName>
            </value>
            <value>
                <fullName>16-Wine</fullName>
            </value>
            <value>
                <fullName>23-CentralCoast</fullName>
            </value>
            <value>
                <fullName>29-BayArea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>