ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Grants_Night_Date__c.field-meta.xml
<CustomField>
    <fullName>Grants_Night_Date__c</fullName>
    <label>Grants Night Date</label>
    <type>Date</type>
</CustomField>