ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Grants_Night_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grants_Night_Notes__c</fullName>
    <description>Grants night notes</description>
    <label>Grants Night Notes</label>
    <type>TextArea</type>
</CustomField>