ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/QuickBooks_Class_No__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Class_No__c</fullName>
    <description>Quickbooks class number, as per 4/13/17 document from Laura L.
100-OPS
200-Inspire
300-Transform
500-Empower
9000-Inactive</description>
    <label>QuickBooks Class No</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>