ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>