ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Total_GC_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_GC_Balance__c</fullName>
    <formula>HierarchyAmountWonOpportunities  - Target_Field__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GC Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>