ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Total_Grants_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Total_Grants_Awarded__c</fullName>
    <label>Total Grants Awarded</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>