ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/fields/Total_Responded__c.field-meta.xml
<CustomField>
    <fullName>Total_Responded__c</fullName>
    <label>Total Responded</label>
    <summaryFilterItems>
        <field>CampaignMember.Response_Type__c</field>
        <operation>equals</operation>
        <value>Responded</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>