ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/recordTypes/General_Campaign.recordType-meta.xml
<RecordType>
    <fullName>General_Campaign</fullName>
    <active>true</active>
    <label>General Campaign</label>
</RecordType>