ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/recordTypes/Giving_Circle.recordType-meta.xml
<RecordType>
    <fullName>Giving_Circle</fullName>
    <active>true</active>
    <description>Campaign Record Type for Giving Circle - for specific page layout</description>
    <label>Giving Circle</label>
</RecordType>