ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/recordTypes/Parent_Giving_Circle.recordType-meta.xml
<RecordType>
    <fullName>Parent_Giving_Circle</fullName>
    <active>true</active>
    <label>Parent Giving Circle</label>
</RecordType>