ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/listViews/All_LGC_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_LGC_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>LGC_Code__c</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Giving_Circle</value>
    </filters>
    <label>All LGC Campaigns</label>
</ListView>