ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/listViews/Copy_of_2019_LGCN.listView-meta.xml
<ListView>
    <fullName>Copy_of_2019_LGCN</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>Giving_Circle_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.Giving_Circle</value>
    </filters>
    <label>2020 LGCN</label>
</ListView>