ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/listViews/LCF_Pillars.listView-meta.xml
<ListView>
    <fullName>LCF_Pillars</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>equals</operation>
        <value>inspire,transform,empower,Mission Support,Rapid Response,Fiscally Sponsored Projects</value>
    </filters>
    <label>LCF Pillars</label>
</ListView>