ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Campaign/listViews/LGC_Parent_Campaigns.listView-meta.xml
<ListView>
    <fullName>LGC_Parent_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Giving_Circle_Balance__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Parent</value>
    </filters>
    <label>LGC Parent Campaigns</label>
</ListView>